# facedetector

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/video_tracking/: main.py
videos/: readme.docx
