[project]
name = "video-tracking"
version = "0.1.0"
description = "YOLO Object Detection with Video Processing and Face Recognition"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "ultralytics>=8.3.27",
    "opencv-python>=4.10.0.84",
    "tf-keras>=2.18.0",
    "deepface>=0.0.93",
    "lapx>=0.5.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
]
typing = [
    "types-pillow",
    "types-requests",
]
all = [
    "video-tracking[dev,typing]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "A",   # flake8-builtins
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true